Refactor messages to monthly shard-based DynamoDB design.
PK = MESSAGES#YYYY-MM, SK = <ISO_datetime>#<uuid>. Queries use
ScanIndexForward=false for newest-first ordering. Pagination walks
backwards through monthly shards up to 24 months. getDayMessages uses
begins_with on SK instead of a scan. No Terraform changes needed.

Note: existing data with UUID-as-PK schema must be cleared from the table.