@@ -6,18 +6,17 @@ import com.schullersoftwareservices.model.MessagesPage;
 import io.micronaut.core.annotation.Introspected;
 import jakarta.inject.Inject;
 import java.time.LocalDateTime;
+import java.time.YearMonth;
+import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 import software.amazon.awssdk.services.dynamodb.model.PutItemRequest;
 import software.amazon.awssdk.services.dynamodb.model.QueryRequest;
 import software.amazon.awssdk.services.dynamodb.model.QueryResponse;
-import software.amazon.awssdk.services.dynamodb.model.ScanRequest;
-import software.amazon.awssdk.services.dynamodb.model.ScanResponse;
 
 @Introspected
 public class MessageRepository {
@@ -28,71 +27,139 @@ public class MessageRepository {
   private static final String DATETIME = "DateTime";
   private static final String MESSAGE = "Message";
   private static final String OWNER = "Owner";
+  private static final String SHARD_PREFIX = "MESSAGES#";
   private static final int DEFAULT_PAGE_SIZE = 20;
+  private static final int MAX_MONTHS_LOOKBACK = 24;
 
   @Inject private DynamoDbClient dynamoDbClient;
 
   public Message putMessage(MessageBody messageBody, String owner) {
-    Message message =
-        new Message(UUID.randomUUID(), owner, messageBody.message(), LocalDateTime.now());
+    LocalDateTime now = LocalDateTime.now();
+    Message message = new Message(UUID.randomUUID(), owner, messageBody.message(), now);
     dynamoDbClient.putItem(
         PutItemRequest.builder().tableName(TABLE_NAME).item(toMap(message)).build());
     return message;
   }
 
   public List<Message> getDayMessages(String date) {
+    String shard = SHARD_PREFIX + date.substring(0, 7);
     QueryResponse response =
         dynamoDbClient.query(
             QueryRequest.builder()
                 .tableName(TABLE_NAME)
-                .keyConditionExpression("#d = :v_date")
-                .expressionAttributeNames(Map.of("#d", "Date"))
-                .expressionAttributeValues(
-                    Map.of(":v_date", AttributeValue.builder().s(date).build()))
+                .keyConditionExpression("#pk = :pk AND begins_with(#sk, :date)")
+                .expressionAttributeNames(Map.of("#pk", PK, "#sk", SK))
+                .expressionAttributeValues(Map.of(":pk", av(shard), ":date", av(date + "T")))
+                .scanIndexForward(false)
                 .build());
-    return response.items().stream().map(this::fromMap).collect(Collectors.toList());
+    return response.items().stream().map(this::fromMap).toList();
   }
 
   public MessagesPage getAllMessages(String cursor) {
-    ScanRequest.Builder builder =
-        ScanRequest.builder().tableName(TABLE_NAME).limit(DEFAULT_PAGE_SIZE);
-    if (cursor != null) {
-      builder.exclusiveStartKey(decodeCursor(cursor));
+    String shard;
+    Map<String, AttributeValue> exclusiveStartKey = null;
+
+    if (cursor == null) {
+      shard = currentShard();
+    } else {
+      CursorData data = decodeCursor(cursor);
+      shard = data.shard();
+      exclusiveStartKey = data.lastKey();
     }
-    ScanResponse response = dynamoDbClient.scan(builder.build());
-    List<Message> messages =
-        response.items().stream().map(this::fromMap).collect(Collectors.toList());
-    String nextCursor =
-        response.lastEvaluatedKey().isEmpty() ? null : encodeCursor(response.lastEvaluatedKey());
+
+    List<Message> messages = new ArrayList<>();
+    String nextCursor = null;
+    String lastQueriedShard = shard;
+    boolean lastShardExhausted = false;
+
+    while (messages.size() < DEFAULT_PAGE_SIZE) {
+      lastQueriedShard = shard;
+      int remaining = DEFAULT_PAGE_SIZE - messages.size();
+
+      QueryRequest.Builder qb =
+          QueryRequest.builder()
+              .tableName(TABLE_NAME)
+              .keyConditionExpression("#pk = :pk")
+              .expressionAttributeNames(Map.of("#pk", PK))
+              .expressionAttributeValues(Map.of(":pk", av(shard)))
+              .scanIndexForward(false)
+              .limit(remaining);
+      if (exclusiveStartKey != null) qb.exclusiveStartKey(exclusiveStartKey);
+
+      QueryResponse resp = dynamoDbClient.query(qb.build());
+      messages.addAll(resp.items().stream().map(this::fromMap).toList());
+
+      if (!resp.lastEvaluatedKey().isEmpty()) {
+        nextCursor = encodeCursor(shard, resp.lastEvaluatedKey().get(SK).s());
+        lastShardExhausted = false;
+        break;
+      }
+
+      lastShardExhausted = true;
+      String prev = previousShard(shard);
+      if (prev == null) break;
+      shard = prev;
+      exclusiveStartKey = null;
+    }
+
+    // If page filled exactly when a shard was exhausted, older shards may still have items
+    if (nextCursor == null && lastShardExhausted && messages.size() == DEFAULT_PAGE_SIZE) {
+      String prev = previousShard(lastQueriedShard);
+      if (prev != null) nextCursor = encodeCursor(prev, null);
+    }
+
     return new MessagesPage(messages, nextCursor);
   }
 
   private Message fromMap(Map<String, AttributeValue> values) {
+    String sk = values.get(SK).s();
+    UUID uuid = UUID.fromString(sk.substring(sk.lastIndexOf('#') + 1));
     return new Message(
-        UUID.fromString(values.get(PK).s()),
+        uuid,
         values.get(OWNER).s(),
         values.get(MESSAGE).s(),
         LocalDateTime.parse(values.get(DATETIME).s()));
   }
 
   private Map<String, AttributeValue> toMap(Message message) {
+    String shard = SHARD_PREFIX + YearMonth.from(message.dateTime());
+    String sk = message.dateTime() + "#" + message.uuid();
     return Map.of(
-        PK, AttributeValue.builder().s(message.uuid().toString()).build(),
-        SK, AttributeValue.builder().s(message.dateTime().toLocalDate().toString()).build(),
-        DATETIME, AttributeValue.builder().s(message.dateTime().toString()).build(),
-        MESSAGE, AttributeValue.builder().s(message.message()).build(),
-        OWNER, AttributeValue.builder().s(message.owner()).build());
+        PK, av(shard),
+        SK, av(sk),
+        DATETIME, av(message.dateTime().toString()),
+        MESSAGE, av(message.message()),
+        OWNER, av(message.owner()));
   }
 
-  private String encodeCursor(Map<String, AttributeValue> key) {
-    String raw = key.get(PK).s() + "|" + key.get(SK).s();
+  private String currentShard() {
+    return SHARD_PREFIX + YearMonth.now();
+  }
+
+  private String previousShard(String shard) {
+    YearMonth ym = YearMonth.parse(shard.substring(SHARD_PREFIX.length()));
+    YearMonth prev = ym.minusMonths(1);
+    if (prev.isBefore(YearMonth.now().minusMonths(MAX_MONTHS_LOOKBACK))) return null;
+    return SHARD_PREFIX + prev;
+  }
+
+  private String encodeCursor(String shard, String sk) {
+    String raw = sk == null ? shard : shard + "|" + sk;
     return Base64.getEncoder().encodeToString(raw.getBytes());
   }
 
-  private Map<String, AttributeValue> decodeCursor(String cursor) {
-    String[] parts = new String(Base64.getDecoder().decode(cursor)).split("\\|", 2);
-    return Map.of(
-        PK, AttributeValue.builder().s(parts[0]).build(),
-        SK, AttributeValue.builder().s(parts[1]).build());
+  private CursorData decodeCursor(String cursor) {
+    String raw = new String(Base64.getDecoder().decode(cursor));
+    int sep = raw.indexOf('|');
+    if (sep == -1) return new CursorData(raw, null);
+    String shard = raw.substring(0, sep);
+    String sk = raw.substring(sep + 1);
+    return new CursorData(shard, Map.of(PK, av(shard), SK, av(sk)));
   }
+
+  private static AttributeValue av(String s) {
+    return AttributeValue.builder().s(s).build();
+  }
+
+  private record CursorData(String shard, Map<String, AttributeValue> lastKey) {}
 }
